discussion/kv_engine/141139/141139_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42977: Abort cluster_test if node terminates unexpectedly

If a cluster_testapp node suffers a problem and terminates
prematurely, then the cluster_testapp may not notice and can result in
the test eventually being timed out by CTest.

To "fail fast" and aid in debugging such issues, modify NodeImpl to
add a background thread which monitors the child process. If it
terminates before the node is cleanly shutdown (NodeImpl dtor), throw
an exception which will termiante the test.

Note this changes NodeImpl to use boost::process to spawn and monitor
the child process, as that removes the platform-specific code
previously needed here.

Change-Id: I19d0575a695be288a8b4a9538c191e24e7735453

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-11-30 15:54:54.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-30 16:13:15.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32234/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32234/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27786/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: "boost/fusion/algorithm/query/find_if.hpp" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27786/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5993/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10: error: "boost/fusion/algorithm/query/find_if.hpp" file not found [clang-diagnostic-error]
#include <boost/fusion/algorithm/query/find_if.hpp>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5993/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
error: "boost/fusion/algorithm/query/find_if.hpp" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5993/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6520/ : FAILURE

Compile error at [2020-11-30T15:57:16.122Z] tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: "boost/fusion/algorithm/query/find_if.hpp" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6520/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7558/ : FAILURE

Compile error at [2020-11-30T15:58:04.844Z] tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: boost/fusion/algorithm/query/find_if.hpp: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7558/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7450/ : FAILURE

Compile error at [2020-11-30T16:02:00.362Z] tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: boost/fusion/algorithm/query/find_if.hpp: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7841/ : FAILURE

Compile error at [2020-11-30T16:07:34.698Z] tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: "boost/fusion/algorithm/query/find_if.hpp" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15382/ : FAILURE

Compile error at [2020-11-30T16:01:50.068Z] tlm/deps/boost.exploded/include/boost/process/error.hpp:27:10:
fatal error: "boost/fusion/algorithm/query/find_if.hpp" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15382/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4527/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
